--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "*": "prettier --ignore-unknown --write"
   },
   "dependencies": {
+    "ofetch": "^1.3.4",
     "valibot": "^0.36.0"
   },
   "devDependencies": {
